--- a/app/src/main/res/layout/activity_main_temperature.xml
+++ b/app/src/main/res/layout/activity_main_temperature.xml
@@ -14,7 +14,7 @@
         android:orientation="horizontal">
 
         <TextView
-            android:id="@+id/txtmainheight"
+            android:id="@+id/tv_header_height"
             android:layout_width="wrap_content"
             android:layout_height="50dp"
             android:layout_gravity="center"
@@ -27,7 +27,7 @@
             android:textSize="22sp" />
 
         <TextView
-            android:id="@+id/txtmainweight"
+            android:id="@+id/tv_header_weight"
             android:layout_width="wrap_content"
             android:layout_height="50dp"
             android:layout_gravity="center"
@@ -40,7 +40,7 @@
             android:textSize="22sp" />
 
         <TextView
-            android:id="@+id/txtmaintempreture"
+            android:id="@+id/tv_header_tempreture"
             android:layout_width="wrap_content"
             android:layout_height="50dp"
             android:layout_gravity="center"
@@ -54,7 +54,7 @@
 
 
         <TextView
-            android:id="@+id/txtmainpulseoximeter"
+            android:id="@+id/tv_header_pulseoximeter"
             android:layout_width="wrap_content"
             android:layout_height="50dp"
             android:layout_gravity="center"
@@ -69,7 +69,7 @@
 
 
         <TextView
-            android:id="@+id/txtmainbloodpressure"
+            android:id="@+id/tv_header_bloodpressure"
             android:layout_width="wrap_content"
             android:layout_height="50dp"
             android:layout_gravity="center"
@@ -83,7 +83,7 @@
 
 
         <TextView
-            android:id="@+id/txtmainbloodsugar"
+            android:id="@+id/tv_header_bloodsugar"
             android:layout_width="wrap_content"
             android:layout_height="50dp"
             android:layout_gravity="center"
@@ -96,7 +96,7 @@
             android:textSize="18sp" />
 
         <TextView
-            android:id="@+id/txtmainhemoglobin"
+            android:id="@+id/tv_header_hemoglobin"
             android:layout_width="wrap_content"
             android:layout_height="50dp"
             android:layout_gravity="center"
@@ -119,7 +119,7 @@
         android:weightSum="4">
 
         <TextView
-            android:id="@+id/txtName"
+            android:id="@+id/tv_name"
             android:layout_width="wrap_content"
             android:layout_height="60dp"
             android:layout_gravity="center"
@@ -132,7 +132,7 @@
             android:textSize="22sp" />
 
         <TextView
-            android:id="@+id/txtAge"
+            android:id="@+id/tv_age"
             android:layout_width="wrap_content"
             android:layout_height="60dp"
             android:layout_gravity="center"
@@ -145,7 +145,7 @@
             android:textSize="22sp" />
 
         <TextView
-            android:id="@+id/txtGender"
+            android:id="@+id/tv_gender"
             android:layout_width="wrap_content"
             android:layout_height="60dp"
             android:layout_gravity="center"
@@ -158,7 +158,7 @@
             android:textSize="22sp" />
 
         <TextView
-            android:id="@+id/txtMobile"
+            android:id="@+id/tv_mobile_number"
             android:layout_width="wrap_content"
             android:layout_height="60dp"
             android:layout_gravity="center"
@@ -185,7 +185,7 @@
             android:visibility="visible">
 
             <Spinner
-                android:id="@+id/spinner1"
+                android:id="@+id/sp_temprature"
                 android:layout_width="119dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="0.64" />
@@ -229,7 +229,7 @@
                 android:orientation="vertical">
 
                 <TextView
-                    android:id="@+id/textViewTitle"
+                    android:id="@+id/tv_title_temprature"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
@@ -247,7 +247,7 @@
                     android:orientation="horizontal">
 
                     <EditText
-                        android:id="@+id/editText1"
+                        android:id="@+id/et_temprature"
                         android:layout_width="wrap_content"
                         android:layout_height="60dp"
                         android:background="@drawable/rectangle"
@@ -317,7 +317,7 @@
 
         </LinearLayout>
         <Button
-            android:id="@+id/buttonBaudrate"
+            android:id="@+id/btn_next"
             android:layout_width="700dp"
             android:layout_height="50dp"
             android:layout_marginTop="50dp"
