--- a/app/src/main/res/layout/activity_weight_screen.xml
+++ b/app/src/main/res/layout/activity_weight_screen.xml
@@ -22,7 +22,7 @@
             android:textColor="@color/white"
             android:textSize="30sp"
             android:layout_gravity="center"
-            android:id="@+id/txtmainweight"
+            android:id="@+id/tv_header_weight"
             android:gravity="center"
             android:layout_height="60dp" />
 
@@ -33,7 +33,7 @@
             android:textSize="30sp"
             android:background="@color/orange4"
             android:layout_gravity="center"
-            android:id="@+id/txtmainheight"
+            android:id="@+id/tv_header_height"
             android:gravity="center"
             android:layout_height="60dp" />
 
@@ -44,7 +44,7 @@
             android:textSize="30sp"
             android:layout_gravity="center"
             android:gravity="center"
-            android:id="@+id/txtmaintempreture"
+            android:id="@+id/tv_header_tempreture"
             android:layout_height="60dp" />
 
         <TextView
@@ -54,7 +54,7 @@
             android:textSize="30sp"
             android:layout_gravity="center"
             android:gravity="center"
-            android:id="@+id/txtmainpulseoximeter"
+            android:id="@+id/tv_header_pulseoximeter"
             android:layout_height="60dp" />
 
         <TextView
@@ -64,7 +64,7 @@
             android:textSize="30sp"
             android:layout_gravity="center"
             android:gravity="center"
-            android:id="@+id/txtmainbloodpressure"
+            android:id="@+id/tv_header_bloodpressure"
             android:layout_height="60dp" />
 
         <TextView
@@ -74,7 +74,7 @@
             android:textSize="30sp"
             android:layout_gravity="center"
             android:gravity="center"
-            android:id="@+id/txtmainhemoglobin"
+            android:id="@+id/tv_header_hemoglobin"
             android:layout_height="60dp" />
 
         <TextView
@@ -84,7 +84,7 @@
             android:textSize="30sp"
             android:layout_gravity="center"
             android:gravity="center"
-            android:id="@+id/txtmainbloodsugar"
+            android:id="@+id/tv_header_bloodsugar"
             android:layout_height="60dp" />
 
         <TextView
@@ -215,7 +215,7 @@
                     android:layout_marginLeft="5dp"
                     android:textColor="@color/white"
                     android:textSize="35dp"
-                    android:id="@+id/txtweight"
+                    android:id="@+id/tv_weight"
                     android:background="@drawable/repeat"
                     android:layout_height="wrap_content" />
 
@@ -287,7 +287,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:text=""
-                    android:id="@+id/txtbmi"
+                    android:id="@+id/tv_bmi"
                     android:gravity="center"
                     android:textColor="@color/white"
                     android:textSize="35sp"
@@ -355,7 +355,7 @@
                     android:weightSum="3">
 
                     <Button
-                        android:id="@+id/btnrepeat"
+                        android:id="@+id/btn_repeat"
                         android:layout_width="wrap_content"
                         android:layout_height="60dp"
                         android:layout_margin="5dp"
@@ -367,7 +367,7 @@
                         android:textStyle="bold" />
 
                     <Button
-                        android:id="@+id/btnskip"
+                        android:id="@+id/btn_skip"
                         android:layout_width="wrap_content"
                         android:layout_height="60dp"
                         android:layout_margin="5dp"
@@ -380,7 +380,7 @@
 
 
                     <Button
-                        android:id="@+id/btnnext"
+                        android:id="@+id/btn_next"
                         android:layout_width="wrap_content"
                         android:layout_height="60dp"
                         android:layout_margin="5dp"
