--- a/app/src/main/res/layout/actofit_main_activity.xml
+++ b/app/src/main/res/layout/actofit_main_activity.xml
@@ -27,7 +27,7 @@
                 android:orientation="horizontal">
 
                 <TextView
-                    android:id="@+id/txtmainheight"
+                    android:id="@+id/tv_header_height"
                     android:layout_width="wrap_content"
                     android:layout_height="60dp"
                     android:layout_gravity="center"
@@ -40,7 +40,7 @@
                     android:layout_margin="@dimen/pad10" />
 
                 <TextView
-                    android:id="@+id/txtmainweight"
+                    android:id="@+id/tv_header_weight"
                     android:layout_width="wrap_content"
                     android:layout_height="50dp"
                     android:layout_gravity="center"
@@ -55,7 +55,7 @@
 
 
                 <TextView
-                    android:id="@+id/txtmaintempreture"
+                    android:id="@+id/tv_header_tempreture"
                     android:layout_width="wrap_content"
                     android:layout_height="50dp"
                     android:layout_gravity="center"
@@ -68,7 +68,7 @@
                     android:layout_margin="@dimen/pad10" />
 
                 <TextView
-                    android:id="@+id/txtmainpulseoximeter"
+                    android:id="@+id/tv_header_pulseoximeter"
                     android:layout_width="wrap_content"
                     android:layout_height="50dp"
                     android:layout_gravity="center"
@@ -81,7 +81,7 @@
                     android:layout_margin="@dimen/pad10" />
 
                 <TextView
-                    android:id="@+id/txtmainbloodpressure"
+                    android:id="@+id/tv_header_bloodpressure"
                     android:layout_width="wrap_content"
                     android:layout_height="50dp"
                     android:layout_gravity="center"
@@ -95,7 +95,7 @@
 
 
                 <TextView
-                    android:id="@+id/txtmainbloodsugar"
+                    android:id="@+id/tv_header_bloodsugar"
                     android:layout_width="wrap_content"
                     android:layout_height="50dp"
                     android:layout_gravity="center"
@@ -108,7 +108,7 @@
                     android:layout_margin="@dimen/pad10" />
 
                 <TextView
-                    android:id="@+id/txtmainhemoglobin"
+                    android:id="@+id/tv_header_hemoglobin"
                     android:layout_width="wrap_content"
                     android:layout_height="50dp"
                     android:layout_gravity="center"
@@ -132,7 +132,7 @@
                 android:orientation="horizontal">
 
                 <TextView
-                    android:id="@+id/txtName"
+                    android:id="@+id/tv_name"
                     android:layout_width="wrap_content"
                     android:layout_height="60dp"
                     android:layout_gravity="center"
@@ -145,7 +145,7 @@
                     android:layout_margin="@dimen/pad10" />
 
                 <TextView
-                    android:id="@+id/txtAge"
+                    android:id="@+id/tv_age"
                     android:layout_width="wrap_content"
                     android:layout_height="60dp"
                     android:layout_gravity="center"
@@ -158,7 +158,7 @@
                     android:layout_margin="@dimen/pad10" />
 
                 <TextView
-                    android:id="@+id/txtGender"
+                    android:id="@+id/tv_gender"
                     android:layout_width="wrap_content"
                     android:layout_height="60dp"
                     android:layout_gravity="center"
@@ -171,7 +171,7 @@
                     android:layout_margin="@dimen/pad10" />
 
                 <TextView
-                    android:id="@+id/txtMobile"
+                    android:id="@+id/tv_mobile_number"
                     android:layout_width="wrap_content"
                     android:layout_height="60dp"
                     android:layout_gravity="center"
@@ -510,7 +510,7 @@
                     android:weightSum="3">
 
                     <Button
-                        android:id="@+id/btnrepeat"
+                        android:id="@+id/btn_repeat"
                         android:layout_width="wrap_content"
                         android:layout_height="60dp"
                         android:layout_margin="5dp"
@@ -526,7 +526,7 @@
                         android:textStyle="bold" />
 
                     <Button
-                        android:id="@+id/btnskip"
+                        android:id="@+id/btn_skip"
                         android:layout_width="wrap_content"
                         android:layout_height="60dp"
                         android:layout_margin="5dp"
@@ -542,7 +542,7 @@
 
 
                     <Button
-                        android:id="@+id/btnnext"
+                        android:id="@+id/btn_next"
                         android:layout_width="wrap_content"
                         android:layout_height="60dp"
                         android:layout_margin="5dp"
