--- a/app/src/main/res/layout/oxygen_main.xml
+++ b/app/src/main/res/layout/oxygen_main.xml
@@ -21,7 +21,7 @@
             android:textColor="@color/white"
             android:textSize="30sp"
             android:layout_gravity="center"
-            android:id="@+id/txtmainweight"
+            android:id="@+id/tv_header_weight"
             android:gravity="center"
             android:layout_height="60dp" />
 
@@ -31,7 +31,7 @@
             android:textColor="@color/white"
             android:textSize="30sp"
             android:layout_gravity="center"
-            android:id="@+id/txtmainheight"
+            android:id="@+id/tv_header_height"
             android:gravity="center"
             android:layout_height="60dp" />
 
@@ -42,7 +42,7 @@
             android:textSize="30sp"
             android:layout_gravity="center"
             android:gravity="center"
-            android:id="@+id/txtmaintempreture"
+            android:id="@+id/tv_header_tempreture"
             android:layout_height="60dp" />
 
         <TextView
@@ -53,7 +53,7 @@
             android:layout_gravity="center"
             android:gravity="center"
             android:background="@color/orange4"
-            android:id="@+id/txtmainpulseoximeter"
+            android:id="@+id/tv_header_pulseoximeter"
             android:layout_height="60dp" />
 
         <TextView
@@ -63,7 +63,7 @@
             android:textSize="30sp"
             android:layout_gravity="center"
             android:gravity="center"
-            android:id="@+id/txtmainbloodpressure"
+            android:id="@+id/tv_header_bloodpressure"
             android:layout_height="60dp" />
 
         <TextView
@@ -73,7 +73,7 @@
             android:textSize="30sp"
             android:layout_gravity="center"
             android:gravity="center"
-            android:id="@+id/txtmainhemoglobin"
+            android:id="@+id/tv_header_hemoglobin"
             android:layout_height="60dp" />
 
         <TextView
@@ -83,7 +83,7 @@
             android:textSize="30sp"
             android:layout_gravity="center"
             android:gravity="center"
-            android:id="@+id/txtmainbloodsugar"
+            android:id="@+id/tv_header_bloodsugar"
             android:layout_height="60dp" />
 
         <TextView
@@ -229,7 +229,7 @@
             android:weightSum="3">
 
             <Button
-                android:id="@+id/btnrepeat"
+                android:id="@+id/btn_repeat"
                 android:layout_width="wrap_content"
                 android:layout_height="60dp"
                 android:layout_margin="5dp"
@@ -242,7 +242,7 @@
                 android:textStyle="bold" />
 
             <Button
-                android:id="@+id/btnskip"
+                android:id="@+id/btn_skip"
                 android:layout_width="wrap_content"
                 android:layout_height="60dp"
                 android:layout_margin="5dp"
@@ -255,7 +255,7 @@
 
 
             <Button
-                android:id="@+id/btnnext"
+                android:id="@+id/btn_next"
                 android:layout_width="wrap_content"
                 android:layout_height="60dp"
                 android:layout_margin="5dp"
