--- a/app/src/main/res/layout/act_genentertext.xml
+++ b/app/src/main/res/layout/act_genentertext.xml
@@ -170,7 +170,7 @@
 
 
                     <TextView
-                        android:id="@+id/txtweight"
+                        android:id="@+id/tv_weight"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="20dp"
@@ -289,7 +289,7 @@
                         android:background="@drawable/line" />
 
                     <TextView
-                        android:id="@+id/txtphysique"
+                        android:id="@+id/tv_physique"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="20dp"
@@ -408,7 +408,7 @@
                         android:background="@drawable/line" />
 
                     <TextView
-                        android:id="@+id/txtprotine"
+                        android:id="@+id/tv_protine"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="20dp"
@@ -459,7 +459,7 @@
                         android:background="@drawable/line" />
 
                     <TextView
-                        android:id="@+id/txthelthscore"
+                        android:id="@+id/tv_helth_score"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="20dp"
@@ -476,7 +476,7 @@
                         android:background="@drawable/line" />
 
                     <TextView
-                        android:id="@+id/txtskemus"
+                        android:id="@+id/tv_skeletel_muscle"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="20dp"
@@ -494,7 +494,7 @@
                         android:background="@drawable/line" />
 
                     <TextView
-                        android:id="@+id/txtsubfat"
+                        android:id="@+id/tv_subcutaneous_fat"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="20dp"
@@ -528,7 +528,7 @@
                         android:background="@drawable/line" />
 
                     <TextView
-                        android:id="@+id/txtbodyfat"
+                        android:id="@+id/tv_body_fat"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="20dp"
