--- a/app/src/main/res/layout/activity_bp_login_screen.xml
+++ b/app/src/main/res/layout/activity_bp_login_screen.xml
@@ -19,7 +19,7 @@
             android:textColor="@color/white"
             android:textSize="30sp"
             android:layout_gravity="center"
-            android:id="@+id/txtmainweight"
+            android:id="@+id/tv_header_weight"
             android:gravity="center"
             android:layout_height="60dp" />
 
@@ -29,7 +29,7 @@
             android:textColor="@color/white"
             android:textSize="30sp"
             android:layout_gravity="center"
-            android:id="@+id/txtmainheight"
+            android:id="@+id/tv_header_height"
             android:gravity="center"
             android:layout_height="60dp" />
 
@@ -40,7 +40,7 @@
             android:textSize="30sp"
             android:layout_gravity="center"
             android:gravity="center"
-            android:id="@+id/txtmaintempreture"
+            android:id="@+id/tv_header_tempreture"
             android:layout_height="60dp" />
 
         <TextView
@@ -50,7 +50,7 @@
             android:textSize="30sp"
             android:layout_gravity="center"
             android:gravity="center"
-            android:id="@+id/txtmainpulseoximeter"
+            android:id="@+id/tv_header_pulseoximeter"
             android:layout_height="60dp" />
 
         <TextView
@@ -61,7 +61,7 @@
             android:layout_gravity="center"
             android:gravity="center"
             android:background="@color/orange4"
-            android:id="@+id/txtmainbloodpressure"
+            android:id="@+id/tv_header_bloodpressure"
             android:layout_height="60dp" />
 
         <TextView
@@ -71,7 +71,7 @@
             android:textSize="30sp"
             android:layout_gravity="center"
             android:gravity="center"
-            android:id="@+id/txtmainhemoglobin"
+            android:id="@+id/tv_header_hemoglobin"
             android:layout_height="60dp" />
 
         <TextView
@@ -81,7 +81,7 @@
             android:textSize="30sp"
             android:layout_gravity="center"
             android:gravity="center"
-            android:id="@+id/txtmainbloodsugar"
+            android:id="@+id/tv_header_bloodsugar"
             android:layout_height="60dp" />
 
         <TextView
@@ -222,7 +222,7 @@
                 android:weightSum="3">
 
                 <Button
-                    android:id="@+id/btnrepeat"
+                    android:id="@+id/btn_repeat"
                     android:layout_width="wrap_content"
                     android:layout_height="60dp"
                     android:layout_margin="5dp"
