--- a/app/src/main/res/layout/activity_dashboard_screen.xml
+++ b/app/src/main/res/layout/activity_dashboard_screen.xml
@@ -25,7 +25,7 @@
                 android:textColor="@color/white"
                 android:textSize="30sp"
                 android:layout_gravity="center"
-                android:id="@+id/txtmainweight"
+                android:id="@+id/tv_header_weight"
                 android:gravity="center"
                 android:layout_height="60dp" />
 
@@ -35,7 +35,7 @@
                 android:textColor="@color/white"
                 android:textSize="30sp"
                 android:layout_gravity="center"
-                android:id="@+id/txtmainheight"
+                android:id="@+id/tv_header_height"
                 android:gravity="center"
                 android:layout_height="60dp" />
 
@@ -46,7 +46,7 @@
                 android:textSize="30sp"
                 android:layout_gravity="center"
                 android:gravity="center"
-                android:id="@+id/txtmaintempreture"
+                android:id="@+id/tv_header_tempreture"
                 android:layout_height="60dp" />
 
             <TextView
@@ -56,7 +56,7 @@
                 android:textSize="30sp"
                 android:layout_gravity="center"
                 android:gravity="center"
-                android:id="@+id/txtmainpulseoximeter"
+                android:id="@+id/tv_header_pulseoximeter"
                 android:layout_height="60dp" />
 
             <TextView
@@ -66,7 +66,7 @@
                 android:textSize="30sp"
                 android:layout_gravity="center"
                 android:gravity="center"
-                android:id="@+id/txtmainbloodpressure"
+                android:id="@+id/tv_header_bloodpressure"
                 android:layout_height="60dp" />
 
             <TextView
@@ -76,7 +76,7 @@
                 android:textSize="30sp"
                 android:layout_gravity="center"
                 android:gravity="center"
-                android:id="@+id/txtmainhemoglobin"
+                android:id="@+id/tv_header_hemoglobin"
                 android:layout_height="60dp" />
 
             <TextView
@@ -86,7 +86,7 @@
                 android:textSize="30sp"
                 android:layout_gravity="center"
                 android:gravity="center"
-                android:id="@+id/txtmainbloodsugar"
+                android:id="@+id/tv_header_bloodsugar"
                 android:layout_height="60dp" />
 
             <TextView
