--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -24,7 +24,7 @@
                 android:orientation="horizontal">
 
                 <TextView
-                    android:id="@+id/txtmainheight"
+                    android:id="@+id/tv_header_height"
                     android:layout_width="wrap_content"
                     android:layout_height="60dp"
                     android:layout_gravity="center"
@@ -37,7 +37,7 @@
                     android:textSize="22sp" />
 
                 <TextView
-                    android:id="@+id/txtmainweight"
+                    android:id="@+id/tv_header_weight"
                     android:layout_width="wrap_content"
                     android:layout_height="50dp"
                     android:layout_gravity="center"
@@ -50,7 +50,7 @@
                     android:textSize="22sp" />
 
                 <TextView
-                    android:id="@+id/txtmaintempreture"
+                    android:id="@+id/tv_header_tempreture"
                     android:layout_width="wrap_content"
                     android:layout_height="50dp"
                     android:layout_gravity="center"
@@ -64,7 +64,7 @@
 
 
                 <TextView
-                    android:id="@+id/txtmainpulseoximeter"
+                    android:id="@+id/tv_header_pulseoximeter"
                     android:layout_width="wrap_content"
                     android:layout_height="50dp"
                     android:layout_gravity="center"
@@ -78,7 +78,7 @@
 
 
                 <TextView
-                    android:id="@+id/txtmainbloodpressure"
+                    android:id="@+id/tv_header_bloodpressure"
                     android:layout_width="wrap_content"
                     android:layout_height="50dp"
                     android:layout_gravity="center"
@@ -91,7 +91,7 @@
                     android:textSize="22sp" />
 
                 <TextView
-                    android:id="@+id/txtmainbloodsugar"
+                    android:id="@+id/tv_header_bloodsugar"
                     android:layout_width="wrap_content"
                     android:layout_height="50dp"
                     android:layout_gravity="center"
@@ -104,7 +104,7 @@
                     android:textSize="22sp" />
 
                 <TextView
-                    android:id="@+id/txtmainhemoglobin"
+                    android:id="@+id/tv_header_hemoglobin"
                     android:layout_width="wrap_content"
                     android:layout_height="50dp"
                     android:layout_gravity="center"
@@ -127,7 +127,7 @@
                 android:weightSum="4">
 
                 <TextView
-                    android:id="@+id/txtName"
+                    android:id="@+id/tv_name"
                     android:layout_width="wrap_content"
                     android:layout_height="60dp"
                     android:layout_gravity="center"
@@ -140,7 +140,7 @@
                     android:textSize="22sp" />
 
                 <TextView
-                    android:id="@+id/txtAge"
+                    android:id="@+id/tv_age"
                     android:layout_width="wrap_content"
                     android:layout_height="60dp"
                     android:layout_gravity="center"
@@ -153,7 +153,7 @@
                     android:textSize="22sp" />
 
                 <TextView
-                    android:id="@+id/txtGender"
+                    android:id="@+id/tv_gender"
                     android:layout_width="wrap_content"
                     android:layout_height="60dp"
                     android:layout_gravity="center"
@@ -166,7 +166,7 @@
                     android:textSize="22sp" />
 
                 <TextView
-                    android:id="@+id/txtMobile"
+                    android:id="@+id/tv_mobile_number"
                     android:layout_width="wrap_content"
                     android:layout_height="60dp"
                     android:layout_gravity="center"
