--- a/app/src/main/res/layout/activity_main_hemoglobin.xml
+++ b/app/src/main/res/layout/activity_main_hemoglobin.xml
@@ -20,7 +20,7 @@
             android:orientation="horizontal">
 
             <TextView
-                android:id="@+id/txtmainheight"
+                android:id="@+id/tv_header_height"
                 android:layout_width="wrap_content"
                 android:layout_height="60dp"
                 android:layout_gravity="center"
@@ -33,7 +33,7 @@
                 android:textSize="22sp" />
 
             <TextView
-                android:id="@+id/txtmainweight"
+                android:id="@+id/tv_header_weight"
                 android:layout_width="wrap_content"
                 android:layout_height="50dp"
                 android:layout_gravity="center"
@@ -46,7 +46,7 @@
                 android:textSize="22sp" />
 
             <TextView
-                android:id="@+id/txtmainpulseoximeter"
+                android:id="@+id/tv_header_pulseoximeter"
                 android:layout_width="wrap_content"
                 android:layout_height="50dp"
                 android:layout_gravity="center"
@@ -59,7 +59,7 @@
                 android:textSize="22sp" />
 
             <TextView
-                android:id="@+id/txtmaintempreture"
+                android:id="@+id/tv_header_tempreture"
                 android:layout_width="wrap_content"
                 android:layout_height="50dp"
                 android:layout_gravity="center"
@@ -72,7 +72,7 @@
                 android:textSize="22sp" />
 
             <TextView
-                android:id="@+id/txtmainbloodpressure"
+                android:id="@+id/tv_header_bloodpressure"
                 android:layout_width="wrap_content"
                 android:layout_height="50dp"
                 android:layout_gravity="center"
@@ -85,7 +85,7 @@
                 android:textSize="22sp" />
 
             <TextView
-                android:id="@+id/txtmainbloodsugar"
+                android:id="@+id/tv_header_bloodsugar"
                 android:layout_width="wrap_content"
                 android:layout_height="50dp"
                 android:layout_gravity="center"
@@ -98,7 +98,7 @@
                 android:textSize="22sp" />
 
             <TextView
-                android:id="@+id/txtmainhemoglobin"
+                android:id="@+id/tv_header_hemoglobin"
                 android:layout_width="wrap_content"
                 android:layout_height="50dp"
                 android:layout_gravity="center"
@@ -122,7 +122,7 @@
             android:weightSum="4">
 
             <TextView
-                android:id="@+id/txtName"
+                android:id="@+id/tv_name"
                 android:layout_width="wrap_content"
                 android:layout_height="60dp"
                 android:layout_gravity="center"
@@ -135,7 +135,7 @@
                 android:textSize="22sp" />
 
             <TextView
-                android:id="@+id/txtAge"
+                android:id="@+id/tv_age"
                 android:layout_width="wrap_content"
                 android:layout_height="60dp"
                 android:layout_gravity="center"
@@ -148,7 +148,7 @@
                 android:textSize="22sp" />
 
             <TextView
-                android:id="@+id/txtGender"
+                android:id="@+id/tv_gender"
                 android:layout_width="wrap_content"
                 android:layout_height="60dp"
                 android:layout_gravity="center"
@@ -161,7 +161,7 @@
                 android:textSize="22sp" />
 
             <TextView
-                android:id="@+id/txtMobile"
+                android:id="@+id/tv_mobile_number"
                 android:layout_width="wrap_content"
                 android:layout_height="60dp"
                 android:layout_gravity="center"
