--- a/app/src/main/res/layout/activity_otp_verify_screen.xml
+++ b/app/src/main/res/layout/activity_otp_verify_screen.xml
@@ -23,7 +23,7 @@
             android:src="@mipmap/applogo" />
 
         <TextView
-            android:id="@+id/txtName"
+            android:id="@+id/tv_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/margin20"
