--- a/app/src/main/res/layout/activity_print_priview_screen.xml
+++ b/app/src/main/res/layout/activity_print_priview_screen.xml
@@ -123,7 +123,7 @@
 
 
         <TextView
-            android:id="@+id/txtweight"
+            android:id="@+id/tv_weight"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="20dp"
