--- a/app/src/main/res/layout/activity_pulse_oximeter_main.xml
+++ b/app/src/main/res/layout/activity_pulse_oximeter_main.xml
@@ -17,7 +17,7 @@
         android:layout_height="wrap_content">
 
         <TextView
-            android:id="@+id/txtmainheight"
+            android:id="@+id/tv_header_height"
             android:layout_width="wrap_content"
             android:layout_height="50dp"
             android:layout_gravity="center"
@@ -30,7 +30,7 @@
             android:textSize="22sp" />
 
         <TextView
-            android:id="@+id/txtmainweight"
+            android:id="@+id/tv_header_weight"
             android:layout_width="wrap_content"
             android:layout_height="50dp"
             android:layout_gravity="center"
@@ -45,7 +45,7 @@
 
 
         <TextView
-            android:id="@+id/txtmaintempreture"
+            android:id="@+id/tv_header_tempreture"
             android:layout_width="wrap_content"
             android:layout_height="50dp"
             android:layout_gravity="center"
@@ -58,7 +58,7 @@
             android:textSize="22sp" />
 
         <TextView
-            android:id="@+id/txtmainpulseoximeter"
+            android:id="@+id/tv_header_pulseoximeter"
             android:layout_width="wrap_content"
             android:layout_height="50dp"
             android:layout_gravity="center"
@@ -73,7 +73,7 @@
 
 
         <TextView
-            android:id="@+id/txtmainbloodpressure"
+            android:id="@+id/tv_header_bloodpressure"
             android:layout_width="wrap_content"
             android:layout_height="50dp"
             android:layout_gravity="center"
@@ -90,7 +90,7 @@
 
 
         <TextView
-            android:id="@+id/txtmainhemoglobin"
+            android:id="@+id/tv_header_hemoglobin"
             android:layout_width="wrap_content"
             android:layout_height="50dp"
             android:layout_gravity="center"
@@ -103,7 +103,7 @@
             android:textSize="22sp" />
 
         <TextView
-            android:id="@+id/txtmainbloodsugar"
+            android:id="@+id/tv_header_bloodsugar"
             android:layout_width="wrap_content"
             android:layout_height="50dp"
             android:layout_gravity="center"
@@ -126,7 +126,7 @@
         android:weightSum="4">
 
         <TextView
-            android:id="@+id/txtName"
+            android:id="@+id/tv_name"
             android:layout_width="wrap_content"
             android:layout_height="60dp"
             android:layout_gravity="center"
@@ -139,7 +139,7 @@
             android:textSize="22sp" />
 
         <TextView
-            android:id="@+id/txtAge"
+            android:id="@+id/tv_age"
             android:layout_width="wrap_content"
             android:layout_height="60dp"
             android:layout_gravity="center"
@@ -152,7 +152,7 @@
             android:textSize="22sp" />
 
         <TextView
-            android:id="@+id/txtGender"
+            android:id="@+id/tv_gender"
             android:layout_width="wrap_content"
             android:layout_height="60dp"
             android:layout_gravity="center"
@@ -165,7 +165,7 @@
             android:textSize="22sp" />
 
         <TextView
-            android:id="@+id/txtMobile"
+            android:id="@+id/tv_mobile_number"
             android:layout_width="wrap_content"
             android:layout_height="60dp"
             android:layout_gravity="center"
@@ -316,7 +316,7 @@
             android:weightSum="3">
 
             <Button
-                android:id="@+id/btnrepeat"
+                android:id="@+id/btn_repeat"
                 android:layout_width="wrap_content"
                 android:layout_height="60dp"
                 android:layout_margin="5dp"
