--- a/app/src/main/res/layout/and_dashboard_new.xml
+++ b/app/src/main/res/layout/and_dashboard_new.xml
@@ -108,7 +108,7 @@
                         android:orientation="horizontal">
 
                         <TextView
-                            android:id="@+id/txtmainweight"
+                            android:id="@+id/tv_header_weight"
                             android:layout_width="wrap_content"
                             android:layout_height="60dp"
                             android:layout_gravity="center"
@@ -121,7 +121,7 @@
                             android:textSize="22sp" />
 
                         <TextView
-                            android:id="@+id/txtmainheight"
+                            android:id="@+id/tv_header_height"
                             android:layout_width="wrap_content"
                             android:layout_height="50dp"
                             android:layout_gravity="center"
@@ -134,7 +134,7 @@
                             android:textSize="22sp" />
 
                         <TextView
-                            android:id="@+id/txtmaintempreture"
+                            android:id="@+id/tv_header_tempreture"
                             android:layout_width="wrap_content"
                             android:layout_height="50dp"
                             android:layout_gravity="center"
@@ -147,7 +147,7 @@
                             android:textSize="22sp" />
 
                         <TextView
-                            android:id="@+id/txtmainpulseoximeter"
+                            android:id="@+id/tv_header_pulseoximeter"
                             android:layout_width="wrap_content"
                             android:layout_height="50dp"
                             android:layout_gravity="center"
@@ -163,7 +163,7 @@
 
 
                         <TextView
-                            android:id="@+id/txtmainbloodpressure"
+                            android:id="@+id/tv_header_bloodpressure"
                             android:layout_width="wrap_content"
                             android:layout_height="50dp"
                             android:layout_gravity="center"
@@ -177,7 +177,7 @@
 
 
                         <TextView
-                            android:id="@+id/txtmainhemoglobin"
+                            android:id="@+id/tv_header_hemoglobin"
                             android:layout_width="wrap_content"
                             android:layout_height="50dp"
                             android:layout_gravity="center"
@@ -190,7 +190,7 @@
                             android:textSize="22sp" />
 
                         <TextView
-                            android:id="@+id/txtmainbloodsugar"
+                            android:id="@+id/tv_header_bloodsugar"
                             android:layout_width="wrap_content"
                             android:layout_height="50dp"
                             android:layout_gravity="center"
@@ -213,7 +213,7 @@
                         android:weightSum="4">
 
                         <TextView
-                            android:id="@+id/txtName"
+                            android:id="@+id/tv_name"
                             android:layout_width="wrap_content"
                             android:layout_height="60dp"
                             android:layout_gravity="center"
@@ -226,7 +226,7 @@
                             android:textSize="22sp" />
 
                         <TextView
-                            android:id="@+id/txtAge"
+                            android:id="@+id/tv_age"
                             android:layout_width="wrap_content"
                             android:layout_height="60dp"
                             android:layout_gravity="center"
@@ -239,7 +239,7 @@
                             android:textSize="22sp" />
 
                         <TextView
-                            android:id="@+id/txtGender"
+                            android:id="@+id/tv_gender"
                             android:layout_width="wrap_content"
                             android:layout_height="60dp"
                             android:layout_gravity="center"
@@ -252,7 +252,7 @@
                             android:textSize="22sp" />
 
                         <TextView
-                            android:id="@+id/txtMobile"
+                            android:id="@+id/tv_mobile_number"
                             android:layout_width="wrap_content"
                             android:layout_height="60dp"
                             android:layout_gravity="center"
@@ -349,7 +349,7 @@
                             android:weightSum="3">
 
                             <Button
-                                android:id="@+id/btnrepeat"
+                                android:id="@+id/btn_repeat"
                                 android:layout_width="wrap_content"
                                 android:layout_height="50dp"
                                 android:layout_gravity="center_vertical"
@@ -379,7 +379,7 @@
 
 
                             <Button
-                                android:id="@+id/btnnext"
+                                android:id="@+id/btn_next"
                                 android:layout_width="wrap_content"
                                 android:layout_height="50dp"
                                 android:layout_gravity="center_vertical"
