--- a/app/src/main/res/layout/layout_display_record_screen.xml
+++ b/app/src/main/res/layout/layout_display_record_screen.xml
@@ -33,7 +33,7 @@
                 android:orientation="horizontal">
 
                 <TextView
-                    android:id="@+id/txtmainweight"
+                    android:id="@+id/tv_header_weight"
                     android:layout_width="wrap_content"
                     android:layout_height="60dp"
                     android:layout_gravity="center"
@@ -46,7 +46,7 @@
                     android:layout_margin="@dimen/pad10" />
 
                 <TextView
-                    android:id="@+id/txtmainheight"
+                    android:id="@+id/tv_header_height"
                     android:layout_width="wrap_content"
                     android:layout_height="50dp"
                     android:layout_gravity="center"
@@ -58,7 +58,7 @@
                     android:textSize="22sp"
                     android:layout_margin="@dimen/pad10" />
                 <TextView
-                    android:id="@+id/txtmaintempreture"
+                    android:id="@+id/tv_header_tempreture"
                     android:layout_width="wrap_content"
                     android:layout_height="50dp"
                     android:layout_gravity="center"
@@ -72,7 +72,7 @@
 
 
                 <TextView
-                    android:id="@+id/txtmainpulseoximeter"
+                    android:id="@+id/tv_header_pulseoximeter"
                     android:layout_width="wrap_content"
                     android:layout_height="50dp"
                     android:layout_gravity="center"
@@ -85,7 +85,7 @@
                     android:layout_margin="@dimen/pad10" />
 
                 <TextView
-                    android:id="@+id/txtmainbloodpressure"
+                    android:id="@+id/tv_header_bloodpressure"
                     android:layout_width="wrap_content"
                     android:layout_height="50dp"
                     android:layout_gravity="center"
@@ -98,7 +98,7 @@
                     android:layout_margin="@dimen/pad10" />
 
                 <TextView
-                    android:id="@+id/txtmainhemoglobin"
+                    android:id="@+id/tv_header_hemoglobin"
                     android:layout_width="wrap_content"
                     android:layout_height="50dp"
                     android:layout_gravity="center"
@@ -111,7 +111,7 @@
                     android:layout_margin="@dimen/pad10" />
 
                 <TextView
-                    android:id="@+id/txtmainbloodsugar"
+                    android:id="@+id/tv_header_bloodsugar"
                     android:layout_width="wrap_content"
                     android:layout_height="50dp"
                     android:layout_gravity="center"
@@ -135,7 +135,7 @@
                 android:orientation="horizontal">
 
                 <TextView
-                    android:id="@+id/txtName"
+                    android:id="@+id/tv_name"
                     android:layout_width="wrap_content"
                     android:layout_height="60dp"
                     android:layout_gravity="center"
@@ -148,7 +148,7 @@
                     android:layout_margin="@dimen/pad10" />
 
                 <TextView
-                    android:id="@+id/txtAge"
+                    android:id="@+id/tv_age"
                     android:layout_width="wrap_content"
                     android:layout_height="60dp"
                     android:layout_gravity="center"
@@ -161,7 +161,7 @@
                     android:layout_margin="@dimen/pad10" />
 
                 <TextView
-                    android:id="@+id/txtGender"
+                    android:id="@+id/tv_gender"
                     android:layout_width="wrap_content"
                     android:layout_height="60dp"
                     android:layout_gravity="center"
@@ -174,7 +174,7 @@
                     android:layout_margin="@dimen/pad10" />
 
                 <TextView
-                    android:id="@+id/txtMobile"
+                    android:id="@+id/tv_mobile_number"
                     android:layout_width="wrap_content"
                     android:layout_height="60dp"
                     android:layout_gravity="center"
@@ -206,7 +206,7 @@
                     android:padding="@dimen/pad10">
 
                     <TextView
-                        android:id="@+id/txtweight"
+                        android:id="@+id/tv_weight"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:gravity="center"
@@ -234,7 +234,7 @@
                     android:padding="@dimen/pad10">
 
                     <TextView
-                        android:id="@+id/txtbmi"
+                        android:id="@+id/tv_bmi"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:gravity="center"
@@ -263,7 +263,7 @@
                     android:padding="@dimen/pad10">
 
                     <TextView
-                        android:id="@+id/txtbodyfat"
+                        android:id="@+id/tv_body_fat"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
@@ -302,7 +302,7 @@
                     android:padding="@dimen/pad10">
 
                     <TextView
-                        android:id="@+id/txtphysique"
+                        android:id="@+id/tv_physique"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:gravity="center"
@@ -330,7 +330,7 @@
                     android:padding="@dimen/pad10">
 
                     <TextView
-                        android:id="@+id/txtfatfreeweight"
+                        android:id="@+id/tv_fat_free_weight"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:gravity="center"
@@ -358,7 +358,7 @@
                     android:padding="@dimen/pad10">
 
                     <TextView
-                        android:id="@+id/txtsubfat"
+                        android:id="@+id/tv_subcutaneous_fat"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:gravity="center"
@@ -399,7 +399,7 @@
                     android:padding="@dimen/pad10">
 
                     <TextView
-                        android:id="@+id/txtvisfat"
+                        android:id="@+id/tv_visceral_fat"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:gravity="center"
@@ -427,7 +427,7 @@
                     android:padding="@dimen/pad10">
 
                     <TextView
-                        android:id="@+id/txtbodywater"
+                        android:id="@+id/tv_body_water"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:gravity="center"
@@ -456,7 +456,7 @@
                     android:padding="@dimen/pad10">
 
                     <TextView
-                        android:id="@+id/txtskemus"
+                        android:id="@+id/tv_skeletel_muscle"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:gravity="center"
@@ -493,7 +493,7 @@
                     android:padding="@dimen/pad10">
 
                     <TextView
-                        android:id="@+id/txtmusmass"
+                        android:id="@+id/tv_muscle_mass"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:gravity="center"
@@ -523,7 +523,7 @@
                     android:padding="@dimen/pad10">
 
                     <TextView
-                        android:id="@+id/txtbonemass"
+                        android:id="@+id/tv_bone_mass"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:gravity="center"
@@ -550,7 +550,7 @@
                     android:padding="@dimen/pad10">
 
                     <TextView
-                        android:id="@+id/txtprotine"
+                        android:id="@+id/tv_protine"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:gravity="center"
@@ -588,7 +588,7 @@
                     android:padding="@dimen/pad10">
 
                     <TextView
-                        android:id="@+id/txtbmr"
+                        android:id="@+id/tv_bmr"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:gravity="center"
@@ -616,7 +616,7 @@
                     android:padding="@dimen/pad10">
 
                     <TextView
-                        android:id="@+id/txtmetaage"
+                        android:id="@+id/tv_meta_age"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:gravity="center"
@@ -645,7 +645,7 @@
                     android:padding="@dimen/pad10">
 
                     <TextView
-                        android:id="@+id/txthelthscore"
+                        android:id="@+id/tv_helth_score"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:gravity="center"
@@ -666,7 +666,7 @@
             </LinearLayout>
 
             <Button
-                android:id="@+id/btnback"
+                android:id="@+id/btn_next"
                 android:layout_width="200dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
