--- a/app/src/main/res/layout/new_try_hemoglobin.xml
+++ b/app/src/main/res/layout/new_try_hemoglobin.xml
@@ -21,7 +21,7 @@
             android:orientation="horizontal">
 
             <TextView
-                android:id="@+id/txtmainheight"
+                android:id="@+id/tv_header_height"
                 android:layout_width="wrap_content"
                 android:layout_height="60dp"
                 android:layout_gravity="center"
@@ -34,7 +34,7 @@
                 android:textSize="22sp" />
 
             <TextView
-                android:id="@+id/txtmainweight"
+                android:id="@+id/tv_header_weight"
                 android:layout_width="wrap_content"
                 android:layout_height="50dp"
                 android:layout_gravity="center"
@@ -47,7 +47,7 @@
                 android:textSize="22sp" />
 
             <TextView
-                android:id="@+id/txtmaintempreture"
+                android:id="@+id/tv_header_tempreture"
                 android:layout_width="wrap_content"
                 android:layout_height="50dp"
                 android:layout_gravity="center"
@@ -60,7 +60,7 @@
                 android:textSize="22sp" />
 
             <TextView
-                android:id="@+id/txtmainpulseoximeter"
+                android:id="@+id/tv_header_pulseoximeter"
                 android:layout_width="wrap_content"
                 android:layout_height="50dp"
                 android:layout_gravity="center"
@@ -73,7 +73,7 @@
                 android:textSize="22sp" />
 
             <TextView
-                android:id="@+id/txtmainbloodpressure"
+                android:id="@+id/tv_header_bloodpressure"
                 android:layout_width="wrap_content"
                 android:layout_height="50dp"
                 android:layout_gravity="center"
@@ -86,7 +86,7 @@
                 android:textSize="22sp" />
 
             <TextView
-                android:id="@+id/txtmainbloodsugar"
+                android:id="@+id/tv_header_bloodsugar"
                 android:layout_width="wrap_content"
                 android:layout_height="50dp"
                 android:layout_gravity="center"
@@ -99,7 +99,7 @@
                 android:textSize="22sp" />
 
             <TextView
-                android:id="@+id/txtmainhemoglobin"
+                android:id="@+id/tv_header_hemoglobin"
                 android:layout_width="wrap_content"
                 android:layout_height="50dp"
                 android:layout_gravity="center"
@@ -123,7 +123,7 @@
             android:weightSum="4">
 
             <TextView
-                android:id="@+id/txtName"
+                android:id="@+id/tv_name"
                 android:layout_width="wrap_content"
                 android:layout_height="60dp"
                 android:layout_gravity="center"
@@ -136,7 +136,7 @@
                 android:textSize="22sp" />
 
             <TextView
-                android:id="@+id/txtAge"
+                android:id="@+id/tv_age"
                 android:layout_width="wrap_content"
                 android:layout_height="60dp"
                 android:layout_gravity="center"
@@ -149,7 +149,7 @@
                 android:textSize="22sp" />
 
             <TextView
-                android:id="@+id/txtGender"
+                android:id="@+id/tv_gender"
                 android:layout_width="wrap_content"
                 android:layout_height="60dp"
                 android:layout_gravity="center"
@@ -162,7 +162,7 @@
                 android:textSize="22sp" />
 
             <TextView
-                android:id="@+id/txtMobile"
+                android:id="@+id/tv_mobile_number"
                 android:layout_width="wrap_content"
                 android:layout_height="60dp"
                 android:layout_gravity="center"
