--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -189,21 +189,21 @@
 
                 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                     xmlns:tools="http://schemas.android.com/tools"
-                    android:id="@+id/activity_home"
+                    android:id="@+id/layout_activity_home"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     tools:context=".glucose.ActivityGlucose">
 
                     <include
-                        android:id="@+id/toolbar"
+                        android:id="@+id/layout_toolbar"
                         layout="@layout/toolbar"
                         android:visibility="gone" />
 
                     <TextView
-                        android:id="@+id/logDisplay"
+                        android:id="@+id/tv_log_display"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_below="@+id/toolbar"
+                        android:layout_below="@+id/layout_toolbar"
                         android:layout_marginTop="@dimen/margin20"
                         android:gravity="center"
                         android:textColor="@color/orange4"
@@ -211,17 +211,17 @@
                         android:textStyle="bold" />
 
                     <View
-                        android:id="@+id/custView"
+                        android:id="@+id/view_custom"
                         android:layout_width="match_parent"
                         android:layout_height="1dip"
-                        android:layout_below="@+id/logDisplay"
+                        android:layout_below="@+id/tv_log_display"
                         android:background="#D3D3D3" />
 
                     <TextView
-                        android:id="@+id/offlineTitle"
+                        android:id="@+id/tv_offline_title"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_below="@+id/custView"
+                        android:layout_below="@+id/view_custom"
                         android:layout_marginTop="@dimen/margin20"
                         android:gravity="center"
                         android:textColor="@color/orange4"
@@ -233,8 +233,8 @@
                         android:layout_height="wrap_content"
                         android:orientation="horizontal"
                         android:gravity="center"
-                        android:layout_below="@id/offlineTitle"
-                        android:id="@+id/linear"
+                        android:layout_below="@id/tv_offline_title"
+                        android:id="@+id/layout_glucose"
                         android:weightSum="2">
 
                         <ImageView
@@ -255,12 +255,12 @@
                             android:visibility="gone" />
 
                         <include
-                            android:id="@+id/ll_glucose"
+                            android:id="@+id/layout_glucose_result"
                             layout="@layout/glucose_layout"
                             android:visibility="gone"/>
 
                         <android.support.v7.widget.RecyclerView
-                            android:id="@+id/readingrecycler"
+                            android:id="@+id/rv_reading"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:visibility="visible"
@@ -271,10 +271,10 @@
                     </LinearLayout>
 
                     <LinearLayout
-                        android:id="@+id/btnlayout"
+                        android:id="@+id/layout_btnlayout"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_below="@+id/linear"
+                        android:layout_below="@+id/layout_glucose"
                         android:layout_marginTop="40dp"
                         android:orientation="vertical">
 
@@ -287,7 +287,7 @@
                             android:weightSum="2">
 
                             <Button
-                                android:id="@+id/startTest"
+                                android:id="@+id/btn_start_test"
                                 android:layout_width="match_parent"
                                 android:layout_height="50dp"
                                 android:layout_weight="1"
@@ -300,7 +300,7 @@
 
 
                             <Button
-                                android:id="@+id/writeData"
+                                android:id="@+id/btn_next"
                                 android:layout_width="match_parent"
                                 android:layout_height="50dp"
                                 android:layout_weight="1"
