--- a/app/src/main/res/layout/activity_main_hemoglobin.xml
+++ b/app/src/main/res/layout/activity_main_hemoglobin.xml
@@ -213,7 +213,7 @@
             android:spinnerMode="dialog"
             android:prompt="@string/device"/>
         <LinearLayout
-            android:id="@+id/linear"
+            android:id="@+id/layout_glucose"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@+id/view"
@@ -301,7 +301,7 @@
             android:id="@+id/linearfour"
             android:layout_width="match_parent"
             android:layout_height="100dp"
-            android:layout_below="@+id/linear"
+            android:layout_below="@+id/layout_glucose"
             android:layout_marginTop="10dp"
             android:orientation="horizontal"
             android:padding="10dp"
