--- a/app/src/main/res/layout/activity_weight_screen.xml
+++ b/app/src/main/res/layout/activity_weight_screen.xml
@@ -184,7 +184,7 @@
             android:layout_width="match_parent"
             android:orientation="horizontal"
             android:weightSum="3"
-            android:id="@+id/linear"
+            android:id="@+id/layout_glucose"
             android:visibility="invisible"
             android:layout_below="@+id/lineartwo"
             android:layout_height="wrap_content">
@@ -331,7 +331,7 @@
                 android:orientation="vertical">
 
                 <Button
-                    android:id="@+id/btnstart"
+                    android:id="@+id/btn_start"
                     android:layout_width="200dp"
                     android:layout_height="60dp"
                     android:layout_gravity="center"
